--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a {
   gap: 30vw;
   justify-content: center;
   font-size: 2.5vw;
-  margin-top: 4vw;
+  margin-top: 8vw;
 }
 #user_image {
   background-image: url(images/userimage.jpg);
@@ -47,6 +47,9 @@ a {
   height: 6vw;
   border: 1px solid rgba(0, 0, 0, 0.527);
   position: absolute;
+}
+.btn {
+  margin: 2vw;
 }
 #container-grid {
   display: grid;
